# app.linux.ipm

./: .gitignore  README.md  tree
.github/workflows/: ipm-check.yml
core/: README.md
ipm-cli/: README.md
ipm-core/: .gitignore  Cargo.toml  build-ipm  build.rs  debug  tree
ipm-core/src/: build.rs  core.rs  core_library.rs  lib.rs  main.rs  utils.rs
ipm-core/src/core/: easter.rs  package.rs  server.rs  system.rs  www.rs
ipm-core/src/core/easter/: beleave.txt
ipm-core/src/core/help/: all.md  server.txt
ipm-core/src/core/package/: depend.rs  detail.rs  install.rs  list.rs  search.rs  uninstall.rs
ipm-core/src/core/server/: README.md
ipm-core/src/core/server/default/: README.md  ipm-info.json
ipm-core/src/core/server/default/package/: README.md
ipm-core/src/core/system/: configure.rs
ipm-core/src/core_library/: help.rs  package.rs  system.rs  welcome.rs
ipm-core/src/core_library/help/: detail.txt  general.txt  install.txt  search.txt  system.txt  uninstall.txt  update.txt
ipm-core/src/core_library/package/: detail.rs  install.rs  list.rs  uninstall.rs
ipm-core/src/core_library/system/: configure.rs  configure.sh  init.global.sh  init.local.sh  init.rs  init.sh  remove.rs
ipm-core/src/core_library/welcome/: welcome.txt
ipm-core/src/third/: apt.rs
ipm-core/src/third/apt/: package.rs  repository.rs
ipm-core/src/utilities/: shell.rs
ipm-core/src/utils/: file.rs  print.rs  shell.rs
ipm-default-packages/: README.md  ipm-info.json
ipm-examples/: README.md
ipm-gui/: README.md  test.sh
script/: build  build.sh  test  virt-env
(+20 files in other folders)
