[package]
name = "ipm"
version = "0.1.0"
edition = "2024"
authors = ["The Infinity's <the.infinity.s.infinity@gmail.com>"]
description = "Infinity Package Manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/The-Infinitys/app.linux.ipm"


[dependencies]
termimad = "0.20"
flate2="1.1.0"
tar="0.4.44"

[target.'cfg(unix)'.dependencies]

[build-dependencies]
