[package]
name = "ipm"
version = "0.1.0"
edition = "2024"
authors = ["The Infinity's <the.infinity.s.infinity@gmail.com>"]
description = "Infinity Package Manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/The-Infinitys/app.linux.ipm"
build = "build.rs"

[dependencies]
termimad = "*"
flate2 = "*"
tar = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
nix = "*"
chrono = "*"
reqwest = { version = "*", features = ["blocking"] }
regex = "*"
zip = "*"
[target.'cfg(unix)'.dependencies]

[build-dependencies]
chrono = "0.4.40"